# Polynom

./: CMakeLists.txt  README.md
src/: Polynom.cpp  Polynom.h  main.cpp
tests/: Polynom_unittests.cpp
